<resources>
    <string name="app_name">Go Buy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Go Buy - OOP Project</string>
    <string name="nav_header_subtitle">Instructor - Eng Hanadi</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all">All</string>
    <string name="menu_preserves">Preserves</string>
    <string name="menu_drinks">Drinks</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="ic_home">Home</string>
    <string name="ic_search">Search</string>
    <string name="input_product">Product</string>
    <string name="input_price">Price</string>
</resources>