<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_all" />
        <item
            android:id="@+id/nav_preserves"
            android:icon="@drawable/ic_menu_preserves"
            android:title="@string/menu_preserves" />
        <item
            android:id="@+id/nav_drinks"
            android:icon="@drawable/ic_menu_drink"
            android:title="@string/menu_drinks" />
    </group>

    <item android:title="@string/menu_communicate">

        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>

    </item>
</menu>