<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all">

    <fragment
        android:id="@+id/nav_all"
        android:name="com.asem.market.ui.all.AllFragment"
        android:label="@string/menu_all"
        tools:layout="@layout/fragment_all" />

    <fragment
        android:id="@+id/nav_preserves"
        android:name="com.asem.market.ui.preserves.PreservesFragment"
        android:label="@string/menu_preserves"
        tools:layout="@layout/fragment_preserves" />

    <fragment
        android:id="@+id/nav_drinks"
        android:name="com.asem.market.ui.drinks.DrinksFragment"
        android:label="@string/menu_drinks"
        tools:layout="@layout/fragment_drinks" />
</navigation>